Bug 84887 - FILEOPEN: TabBar::ImplShowPage(unsigned short) crash opening ODG
Summary: FILEOPEN: TabBar::ImplShowPage(unsigned short) crash opening ODG
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: BSA target:4.4.0 target:4.3.7
Keywords:
: 80193 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-10-11 01:31 UTC by Owen Genat (retired)
Modified: 2015-04-16 22:01 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Non-debug backtrace for v4.4.0.0alpha+ 2014-10-10 deb x86_64. (23.44 KB, text/plain)
2014-10-11 01:31 UTC, Owen Genat (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Owen Genat (retired) 2014-10-11 01:31:39 UTC
Created attachment 107686 [details]
Non-debug backtrace for v4.4.0.0alpha+ 2014-10-10 deb x86_64.

Found while testing bug 82524. Attempting to open attachment 104523 [details] results in the indicated crash under Crunchbang 11 x86_64 using v4.4.0.0.alpha0+ Build ID: e21f6e3838a64f6c2517479d021e943e2ffcab94 TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2014-10-10_09:04:45.
Comment 1 Terrence Enger 2014-10-11 13:03:30 UTC
FWIW, I do not get a crash with the daily dbgution bibisect repository
version 2014-10-11.

Terry.
Comment 2 Julien Nabet 2014-10-12 08:58:12 UTC
For the record, on pc Debian x86-64 with master sources updated yesterday, I don't reproduce the crash.
Comment 3 Caolán McNamara 2014-10-14 08:52:03 UTC
I can reproduce it
Comment 5 Commit Notification 2015-02-06 11:32:42 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=acb11982c66f1226659d45cb51f594fae493298d&h=libreoffice-4-3

Resolves: fdo#84887 TabBar::ImplShowPage crash

It will be available in 4.3.7.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Michael Stahl 2015-04-16 22:01:09 UTC
*** Bug 80193 has been marked as a duplicate of this bug. ***