Resolves: fdo#84887 TabBar::ImplShowPage crash

(cherry picked from commit ff7c2cd0dc89f0ffa6742f1f5dcf89f5a6f03839)
Signed-off-by: Stephan Bergmann <sbergman@redhat.com>

Change-Id: I84250c6a40baeabd0d12958dfe0aea346d2b4fc8